[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/utilities/iteractable_object.gd" type="Script" id=1]
[ext_resource path="res://scenes/utilities/dialogue controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/utilities/clicked_area.gd" type="Script" id=3]
[ext_resource path="res://sprites/npcs/citationNpc4_idleF.png" type="Texture" id=4]
[ext_resource path="res://sprites/environment/hallway/walls.png" type="Texture" id=5]
[ext_resource path="res://scenes/levels/hallway.gd" type="Script" id=6]
[ext_resource path="res://sprites/environment/hallway/bottom door.png" type="Texture" id=7]
[ext_resource path="res://sprites/environment/dorm/door.png" type="Texture" id=8]
[ext_resource path="res://sprites/environment/hallway/floor.png" type="Texture" id=9]
[ext_resource path="res://materials/outline.tres" type="Material" id=10]
[ext_resource path="res://scenes/props/cursor.gd" type="Script" id=11]
[ext_resource path="res://sprites/environment/hallway/desk_top.png" type="Texture" id=12]
[ext_resource path="res://sprites/environment/hallway/banners.png" type="Texture" id=13]
[ext_resource path="res://sprites/environment/hallway/desk_bottom.png" type="Texture" id=14]
[ext_resource path="res://sprites/environment/hallway/ground props.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.6667, 48.7622 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1);
uniform float width : hint_range(0, 10) = 1.0;

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * width;
	
	float outline = texture(TEXTURE, UV + vec2(-size.x, 0)).a;
	outline += texture(TEXTURE, UV + vec2(0, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, 0)).a;
	outline += texture(TEXTURE, UV + vec2(0, -size.y)).a;
	outline += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/width = 0.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35.896, 9.51835 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.3975, 29.5395 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 55, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 110, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 165, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 220, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 275, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 330, 0, 55, 71 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 385, 0, 55, 71 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="NavigationPolygon" id=15]
vertices = PoolVector2Array( 76.3355, 163.4, 49.2013, 150.398, 68.9252, 146.431, 124.296, 150.646, 82.2482, 204.599, 78.1536, 204.446, 80.0819, 190.947, 145.735, 150.523, 144.151, 387.9, 144.343, 461.592, 120.907, 459.53, 83.5969, 362.878, 69.9651, 459.868, 47.1917, 458.742, 45.1594, 362.054, 120.907, 477.073, 70.6398, 476.061, 144.89, 297.7, 72.0932, 100.372, 121.403, 98.8565 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 3, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 12, 13, 14, 11, 10 ), PoolIntArray( 10, 15, 16, 12 ), PoolIntArray( 17, 8, 11, 4, 7 ), PoolIntArray( 3, 6, 0 ), PoolIntArray( 18, 19, 3, 2 ) ]
outlines = [ PoolVector2Array( 68.9252, 146.431, 72.0932, 100.372, 121.403, 98.8565, 124.296, 150.646, 145.735, 150.523, 144.89, 297.7, 144.151, 387.9, 144.343, 461.592, 120.907, 459.53, 120.907, 477.073, 70.6398, 476.061, 69.9651, 459.868, 47.1917, 458.742, 45.1594, 362.054, 83.5969, 362.878, 82.2482, 204.599, 78.1536, 204.446, 80.0819, 190.947, 76.3355, 163.4, 49.2013, 150.398 ) ]

[node name="hallway" type="Node2D"]
script = ExtResource( 6 )

[node name="background" type="ColorRect" parent="."]
margin_left = -411.486
margin_top = -140.157
margin_right = 588.514
margin_bottom = 859.843
mouse_filter = 2
color = Color( 0.0666667, 0.0823529, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cursor" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="dialogue controller" parent="." instance=ExtResource( 2 )]

[node name="environment" type="YSort" parent="."]

[node name="player spawn" type="YSort" parent="environment"]

[node name="0" type="Node2D" parent="environment/player spawn"]
position = Vector2( 95.5017, 427.815 )

[node name="1" type="Node2D" parent="environment/player spawn"]
position = Vector2( 97.515, 156.183 )

[node name="interactable objects" type="YSort" parent="environment"]

[node name="door to lounge" type="Area2D" parent="environment/interactable objects"]
position = Vector2( 93.9574, 69.8407 )
script = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="environment/interactable objects/door to lounge"]
position = Vector2( 0, 2.12132 )
shape = SubResource( 1 )
script = ExtResource( 1 )
travel_to = "lounge"
outline_size = 3.0

[node name="door" type="Sprite" parent="environment/interactable objects/door to lounge/collider"]
material = SubResource( 3 )
z_index = 1
texture = ExtResource( 8 )

[node name="door to dorm" type="Area2D" parent="environment/interactable objects"]
position = Vector2( 96.0177, 501.404 )
script = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="environment/interactable objects/door to dorm"]
position = Vector2( 0, 2.12132 )
shape = SubResource( 4 )
script = ExtResource( 1 )
travel_to = "dorm"
outline_size = 3.0
spawn_point = 1

[node name="dorm door" type="Sprite" parent="environment/interactable objects/door to dorm/collider"]
material = ExtResource( 10 )
texture = ExtResource( 7 )

[node name="star dude" type="Area2D" parent="environment/interactable objects"]
position = Vector2( 54.0726, 195.711 )
script = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="environment/interactable objects/star dude"]
shape = SubResource( 5 )
script = ExtResource( 1 )
has_dialogue = true
dialogue = "star dude"
outline_size = 2.0
TYPE = 1

[node name="star dude" type="AnimatedSprite" parent="environment/interactable objects/star dude/collider"]
material = ExtResource( 10 )
frames = SubResource( 14 )
playing = true

[node name="static objects" type="YSort" parent="environment"]

[node name="floor" type="Sprite" parent="environment/static objects"]
position = Vector2( 0.460175, 0.460175 )
texture = ExtResource( 9 )
centered = false

[node name="walls" type="Sprite" parent="environment/static objects"]
z_index = 2
texture = ExtResource( 5 )
centered = false

[node name="groundf props" type="Sprite" parent="environment/static objects"]
texture = ExtResource( 15 )
centered = false

[node name="banners" type="Sprite" parent="environment/static objects"]
position = Vector2( 32.0185, 55.0087 )
z_index = 2
texture = ExtResource( 13 )
centered = false

[node name="desk top" type="Sprite" parent="environment/static objects"]
position = Vector2( 49.7672, 257.095 )
z_index = 2
texture = ExtResource( 12 )

[node name="desk bottom" type="Sprite" parent="environment/static objects"]
position = Vector2( 50.3035, 323.634 )
z_index = 1
texture = ExtResource( 14 )

[node name="navigation" type="Navigation2D" parent="."]

[node name="navmesh" type="NavigationPolygonInstance" parent="navigation"]
position = Vector2( 3.7189, -0.67395 )
navpoly = SubResource( 15 )

[connection signal="body_entered" from="environment/interactable objects/door to lounge" to="environment/interactable objects/door to lounge/collider" method="_on_interactable_body_entered"]
[connection signal="body_exited" from="environment/interactable objects/door to lounge" to="environment/interactable objects/door to lounge/collider" method="_on_interactable_body_exited"]
[connection signal="input_event" from="environment/interactable objects/door to lounge" to="environment/interactable objects/door to lounge/collider" method="_on_interactable_input_event"]
[connection signal="body_entered" from="environment/interactable objects/door to dorm" to="environment/interactable objects/door to dorm/collider" method="_on_interactable_body_entered"]
[connection signal="body_exited" from="environment/interactable objects/door to dorm" to="environment/interactable objects/door to dorm/collider" method="_on_interactable_body_exited"]
[connection signal="input_event" from="environment/interactable objects/door to dorm" to="environment/interactable objects/door to dorm/collider" method="_on_interactable_input_event"]
[connection signal="body_entered" from="environment/interactable objects/star dude" to="environment/interactable objects/star dude/collider" method="_on_interactable_body_entered"]
[connection signal="body_exited" from="environment/interactable objects/star dude" to="environment/interactable objects/star dude/collider" method="_on_interactable_body_exited"]
[connection signal="input_event" from="environment/interactable objects/star dude" to="environment/interactable objects/star dude/collider" method="_on_interactable_input_event"]
